# A-Python-Ray-Mesh-Intersector-in-Slangpy

./: .gitignore  README.md  color.exr  pyproject.toml
slang_bvh/: bvh.py  csv_reader.py  render_mesh.py
slang_bvh/cuda_lib/: __init__.py  module.cpp  radix_sort_pairs.cu  segmented_sort_pairs.cu  test.py
slang_bvh/slang/: bounding_boxes.slang  geometry.slang  get_elements.slang  hierarchy.slang  intersect_test.slang  intersection.slang  morton_codes.slang  slang_bvh.slang  triangle.slang
slang_bvh/util/: radix_sort.py  radix_sort.slang
