[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slang-bvh"
version = "0.1.0"
dependencies = [
    "torch",
    "beartype",
    "colored-traceback",
    "tensordict",
    "rich",
    "slangtorch",
    "termcolor",
    "tensordict>=0.7.0",
    "tqdm",
    "pandas",
    "pyexr",
    "trimesh"
]

[tool.setuptools.package-dir]
"slang_bvh" = "slang_bvh"


[project.scripts]
render-mesh = "slang_bvh.render_mesh:main"

